--- a/taxEvation/views/checkAnswer.erb
+++ b/taxEvation/views/checkAnswer.erb
@@ -52,9 +52,9 @@
                     <form method="post" action="/submitAnswer">
                     
                     <%if @rightData  %>
-                      <h5>You are correct</h5>
+                      <h6>You are correct</h6>
                     <%else %>
-                      <h5>You are correct</h5>
+                      <h6>You are incorrect, the correct answer is:</h6>
                     <% end %>
                     
                     <div class="ans ml-2">
