--- a/taxEvation/views/index.erb
+++ b/taxEvation/views/index.erb
@@ -44,9 +44,7 @@
         <button type="submit" class="btn btn-danger btn-lg px-4 gap-3">Iniciar Quiz</button>
       </div>
       
-      <div class="form-group">
-    <input type="email" class="form-control" id="idUsuario" aria-describedby="emailHelp" placeholder="Inserte su nombre">
-  </div>
+    <input type="text" class="form-control" id="idUsuario" aria-describedby="emailHelp" placeholder="Inserte su nombre" name = "idUsuario">
            <label for="customRange1" class="form-label"><h4>Selecciona cuantas preguntas quieres contestar</h4></label>
 <input type="range" class="form-range" id="customRange1" onchange="rangePrimary.value=value" min = 1 max = 10 name = "customRange1">
 
