--- a/taxEvation/views/quiz.erb
+++ b/taxEvation/views/quiz.erb
@@ -10,7 +10,7 @@
   
     <meta charset="utf-8">
     <title>Question</title>
-    <link href="heroes.css" rel="stylesheet">
+    
 
   </head>
   <body>
@@ -40,7 +40,7 @@
                 <div class="question bg-white p-3 border-bottom">
                     <div class="d-flex flex-row justify-content-between align-items-center mcq">
                         
-                        <h4>Ruby Quiz</h4><span>(1 of 20)</span>
+                        <h4>Ruby Quiz</h4><span>(<%= @preguntaActual %> of <%= @cantidadPreguntas %>)</span>
                         
                     </div>
                 </div>
