--- a/taxEvation/src/views/checkResults.erb
+++ b/taxEvation/src/views/checkResults.erb
@@ -60,7 +60,7 @@
                        
                     
                     
-                    <form method="get" action="/highscore">
+                    <form method="post" action="/postHighscore">
                 </div>
                 <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white"><button class="btn btn-primary border-success align-items-center btn-success" type="submit">Publicar Resultados<i class="fa fa-angle-right ml-2"></i></button></div>
                 </form>
