--- a/taxEvation/src/views/checkAnswer.erb
+++ b/taxEvation/src/views/checkAnswer.erb
@@ -39,7 +39,7 @@
                 <div class="question bg-white p-3 border-bottom">
                     <div class="d-flex flex-row justify-content-between align-items-center mcq">
                         
-                        <h4>Ruby Quiz</h4><span>(1 of 20)</span>
+                        <h4>Ruby Quiz</h4><span>(<%= @preguntaActual %> of <%= @cantidadPreguntas %>)</span>
                         
                     </div>
                 </div>
